@@ -24,7 +24,10 @@ extern void lucas_seq(mpz_t U, mpz_t V, mpz_t n, IV P, IV Q, mpz_t k,
                       mpz_t Qk, mpz_t t);
 extern void alt_lucas_seq(mpz_t U, mpz_t V, mpz_t n, IV P, IV Q, mpz_t k,
                           mpz_t Qk, mpz_t t);
-extern void lucasuv(mpz_t Uh, mpz_t Vl, IV P, IV Q, mpz_t k);
+extern void lucasuv(mpz_t Uh, mpz_t Vl, mpz_t P, mpz_t Q, mpz_t k);
+extern void lucasumod(mpz_t U, mpz_t P, mpz_t Q, mpz_t k, mpz_t n, mpz_t t);
+extern void lucasvmod(mpz_t V, mpz_t P, mpz_t Q, mpz_t k, mpz_t n, mpz_t t);
+
 extern int lucas_lehmer(UV p);
 extern int llr(mpz_t N);
 extern int proth(mpz_t N);
